Modified files for assignment 2

--- a/ZombieApocalypseBrep-SPR/Makefile
+++ b/ZombieApocalypseBrep-SPR/Makefile
@@ -1,3 +1,5 @@
+# this is a comment
+
 TARGET=first
 
 
@@ -7,7 +9,10 @@ bib: bib
 	bibtex ${TARGET}
 
 dvi: ${TARGET}.tex 
+#	run latex twice to get references correct
 	latex ${TARGET}.tex
+#	you can also have a bibtex line here
+#	bibtex $(TARGET)
 	latex $(TARGET).tex
 
 ps: dvi
