Adds SQL functionality and allows user to add goals

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ gnore object and archive files
 
 # ignore node_modules folder, should be installed locally with "npm install
 node_modules/
+
+connect-sql.php
