--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ gnore object and archive files
 # ignore node_modules folder, should be installed locally with "npm install
 node_modules/
 
+Zombie Project\set_nutrition.php
